--- a/docs/use-the-network/devices/ready-to-use/digital-matter/yabby-edge.mdx
+++ b/docs/use-the-network/devices/ready-to-use/digital-matter/yabby-edge.mdx
@@ -3,8 +3,7 @@ id: yabby-edge
 title: Yabby Edge
 pagination_label: Yabby Edge
 sidebar_label: Yabby Edge
-description:
-  Ultra-rugged, Indoor / Outdoor, long-life battery-powered LoRaWAN® GPS asset tracking device
+description: Ultra-rugged and Compact Indoor / Outdoor Asset Tracker for LoRaWAN Networks.
 image: img/use-the-network/devices/ready-to-use/digital-matter/yabby-edge.png
 slug: /use-the-network/devices/ready-to-use/digital-matter/yabby-edge
 ---
@@ -13,36 +12,37 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Yabby Edge
 
-Ultra-rugged, Indoor / Outdoor, long-life battery-powered LoRaWAN® GPS asset tracking device
+Ultra-rugged and Compact Indoor / Outdoor Asset Tracker for LoRaWAN Networks.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/digital-matter/yabby-edge.png')} />
 
 ### Resources
 
 - [Product Page](https://www.digitalmatter.com/our-devices/yabby-edge)
+- [Datasheet] (https://www.digitalmatter.com/wp-content/uploads/2023/02/Yabby-Edge-LoRaWAN-Datasheet-Digital-Matter-V6.pdf)
 
 ### Specifications
 
 #### Sensors:
 
 - accelerometer
-- battery
-- gps
+- GPS
 - temperature
+- battery
 
 #### Dimensions:
 
 - width: 63 mm
-- length: 85 mm
+- length: 84 mm
 - height: 24 mm
 
 #### Weight:
 
-- 88 grams
+- 82 grams (batteries not included)
 
 #### Battery:
 
-- type: AAA
+- type: 2x AAA Lithium (LiFeS2)
 - replaceable: True
 
 ---
