--- a/docs/use-the-network/devices/ready-to-use/dragino/rs485-ln.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino/rs485-ln.mdx
@@ -1,9 +1,9 @@
 ---
 id: rs485-ln
-title: Rs485-Ln
-pagination_label: Rs485 Ln
-sidebar_label: Rs485-Ln
-description: An Rs485/Modbus To LoRaWAN Converter
+title: RS485-LN
+pagination_label: RS485-LN
+sidebar_label: RS485-LN
+description: The Dragino RS485-LN is a RS485 to LoRaWAN Converter.
 image: img/use-the-network/devices/ready-to-use/dragino/rs485-ln.jpg
 slug: /use-the-network/devices/ready-to-use/dragino/rs485-ln
 ---
@@ -12,26 +12,33 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## RS485-LN
 
-An RS485/Modbus to LoRaWAN Converter
+The Dragino RS485-LN is a RS485 to LoRaWAN Converter.
+It converts the RS485 devices into LoRaWAN Wireless Network devices which simplify the IoT installation and reduce the installation/maintaining cost.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/dragino/rs485-ln.jpg')} />
 
 ### Resources
 
 - [Product Page](http://www.dragino.com/products/lora-lorawan-end-node/item/154-rs485-ln.html)
-- [Datasheet](http://www.dragino.com/products/lora-lorawan-end-node/item/154-rs485-ln.html)
+- [Datasheet](https://www.dropbox.com/sh/g7ak0jzyu3rbtpo/AACZujhnZ_SNojGhuBBKxneMa/Datasheet_RS485-LN_RS485%20to%20LoRaWAN%20Converter.pdf?dl=0)
+- [Manual](http://wiki.dragino.com/xwiki/bin/view/Main/User%20Manual%20for%20LoRaWAN%20End%20Nodes/RS485-LN%20%E2%80%93%20RS485%20to%20LoRaWAN%20Converter/)
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+- Class C end-device (default)
+
 #### Dimensions:
 
-- width: 110 mm
-- length: 90 mm
-- height: 25 mm
+**Device:**
+- width: 70 mm
+- length: 135 mm
+- height: 30 mm
 
 #### Weight:
 
-- 210 grams
+- 105 grams
 
 ---
 
