Updates Sphere website URL

--- a/docs/helium-tokens/datacredit-portal.mdx
+++ b/docs/helium-tokens/datacredit-portal.mdx
@@ -238,7 +238,7 @@ https://dc-portal.helium.com/?oui=24&memo=HelloHelium
 | OUI               | `oui`  | `oui=24`      |
 | Transaction memo. | `memo` | `memo=aX0fe8` |
 
-[sphere]: https://sphere.engineer
+[sphere]: https://spherepay.co
 [open-lns]: /iot/open-lns
 [service-providers]: /mobile/service-providers
 [dc-portal]: https://dc-portal.helium.com
