--- a/docs/use-the-network/devices/ready-to-use/dragino/rs485-bl.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino/rs485-bl.mdx
@@ -1,9 +1,9 @@
 ---
 id: rs485-bl
-title: Rs485-Bl
-pagination_label: Rs485 Bl
-sidebar_label: Rs485-Bl
-description: LoRaWAN Rs485/Uart Converter -- Waterproof Battery Powered
+title: RS485-BL
+pagination_label: RS485-BL
+sidebar_label: RS485-BL
+description: The Dragino RS485-BL is a RS485 / Uart to LoRaWAN Converter for IoT solutions.
 image: img/use-the-network/devices/ready-to-use/dragino/rs485-bl.jpg
 slug: /use-the-network/devices/ready-to-use/dragino/rs485-bl
 ---
@@ -12,26 +12,39 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## RS485-BL
 
-LoRaWAN RS485/UART Converter -- WaterProof Battery Powered
+RS485-BL -- LoRaWAN RS485/UART Converter -- Waterproof Battery Powered.
+The Dragino RS485-BL is a RS485/UART to LoRaWAN Converter for IoT solutions. User can connect RS485 or UART sensor to RS485-BL converter, and configure RS485-BL to
+periodically read sensor data and upload via a LoRaWAN network to an IoT server.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/dragino/rs485-bl.jpg')} />
 
 ### Resources
 
 - [Product Page](http://www.dragino.com/products/lora-lorawan-end-node/item/167-rs485-bl.html)
-- [Datasheet](http://www.dragino.com/downloads/index.php?dir=LoRa_End_Node/RS485-BL/&file=Datasheet_RS485-BL_WaterProof_BatteryPower_RS485_UART_to_LoRaWAN_Converter.pdf)
+- [Datasheet](https://www.dropbox.com/sh/kv415xmwpxghk4y/AAA2OB_K5TmKUIpJ-kfX2_eXa/Datasheet_RS485-BL_WaterProof_BatteryPower_RS485_UART_to_LoRaWAN_Converter.pdf?dl=0)
+- [Manual](http://wiki.dragino.com/xwiki/bin/view/Main/User%20Manual%20for%20LoRaWAN%20End%20Nodes/test/)
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device (default)
+- Class C end-device
+
 #### Dimensions:
 
-- width: 50 mm
-- length: 130 mm
-- height: 45 mm
+**Device:**
+- width: 70 mm
+- length: 135 mm
+- height: 30 mm
 
 #### Weight:
 
-- 150 grams
+- 105 grams (excluding batteries)
+
+#### Battery:
+
+- type: 1x [ER26500 + SPC1520 battery pack](http://wiki.dragino.com/xwiki/bin/view/Main/How%20to%20calculate%20the%20battery%20life%20of%20Dragino%20sensors%3F/#H1.ER265002BSPC1520BatteryPack) Lithium-thionyl Chloride (Li-SOCl2) / 3.6 V / 8500 mAh (non-rechargeable)
+- replaceable: true
 
 ---
 
