--- a/docs/use-the-network/devices/ready-to-use/dragino/ldds75.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino/ldds75.mdx
@@ -1,9 +1,9 @@
 ---
 id: ldds75
-title: Ldds75
-pagination_label: Ldds75
-sidebar_label: Ldds75
-description: LoRaWAN Distance Detection Sensor
+title: LDDS75
+pagination_label: LDDS75
+sidebar_label: LDDS75
+description: LDDS75 LoRaWAN Distance Detection Sensor
 image: img/use-the-network/devices/ready-to-use/dragino/ldds75.jpg
 slug: /use-the-network/devices/ready-to-use/dragino/ldds75
 ---
@@ -12,20 +12,40 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## LDDS75
 
-LoRaWAN Distance Detection Sensor
+LDDS75 LoRaWAN Distance Detection Sensor.
+The Dragino LDDS75 is a LoRaWAN distance detection sensor for IoT solutions. It measures the distance between the sensor and a flat object. This sensor module uses ultrasonic sensing technology for distance measurement, and temperature compensation is performed internally to improve data reliability.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/dragino/ldds75.jpg')} />
 
 ### Resources
 
 - [Product Page](http://www.dragino.com/products/lora-lorawan-end-node/item/161-ldds75.html)
-- [Datasheet](http://www.dragino.com/downloads/index.php?dir=LoRa_End_Node/LDDS75/)
+- [Datasheet](https://www.dropbox.com/sh/d1i23dqtc6uo8ye/AAAkL7vwRMUDe3UuPHUaWOJ7a/Datasheet_LDDS75_LoRaWAN_Distance_Detection_Sensor.pdf?dl=0)
+- [Manual](http://wiki.dragino.com/xwiki/bin/view/Main/User%20Manual%20for%20LoRaWAN%20End%20Nodes/LDDS75%20-%20LoRaWAN%20Distance%20Detection%20Sensor%20User%20Manual/)
 
 ### Specifications
+
+#### LoRaWAN device type:
+- Class A end-device
 
 #### Sensors:
 
 - distance
+- battery
+
+#### Dimensions:
+
+**Cable:**
+- length: 25 cm
+
+#### Weight:
+
+- 220 grams
+
+#### Battery:
+
+- type: 1x [ER26500 + SPC1520 battery pack](http://wiki.dragino.com/xwiki/bin/view/Main/How%20to%20calculate%20the%20battery%20life%20of%20Dragino%20sensors%3F/#H1.ER265002BSPC1520BatteryPack) Lithium-thionyl Chloride (Li-SOCl2) / 3.6 V / 8500 mAh (non-rechargeable)
+- replaceable: true
 
 ---
 
