--- a/docs/use-the-network/devices/ready-to-use/dragino/lbt1.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino/lbt1.mdx
@@ -1,9 +1,9 @@
 ---
 id: lbt1
-title: Lbt1
-pagination_label: Lbt1
-sidebar_label: Lbt1
-description: LoRaWAN Ble Indoor Tracker
+title: LBT1
+pagination_label: LBT1
+sidebar_label: LBT1
+description: LBT1 LoRaWAN BLE Indoor Tracker
 image: img/use-the-network/devices/ready-to-use/dragino/lbt1.jpg
 slug: /use-the-network/devices/ready-to-use/dragino/lbt1
 ---
@@ -12,21 +12,46 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## LBT1
 
-LoRaWAN BLE Indoor Tracker
+LBT1 LoRaWAN BLE Indoor Tracker.
+The Dragino LBT1 is a long-range, low-power consumption LoRaWAN Bluetooth tracker. LBT1 scans and finds the nearest iBeacon info and sends an LNS server via a LoRaWAN Network.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/dragino/lbt1.jpg')} />
 
 ### Resources
 
 - [Product Page](http://www.dragino.com/products/lora-lorawan-end-node/item/165-lbt1.html)
-- [Datasheet](http://www.dragino.com/downloads/index.php?dir=LoRa_End_Node/LBT1/)
+- [Datasheet](https://www.dragino.com/downloads/downloads/LoRa_End_Node/LBT1/Datasheet_LBT1.pdf)
+- [Manual](https://www.dragino.com/downloads/downloads/LoRa_End_Node/LBT1/LBT1_LoRaWAN_BLE_Indoor_Tracker_UserManual_v1.2.0.pdf)
 
 ### Specifications
+
+#### LoRaWAN device type:
+- Class A end-device
 
 #### Sensors:
 
 - motion
 
+#### Dimensions:
+
+**Device:**
+- width: 48 mm
+- length: 85 mm
+- height: 15 mm
+
+#### Weight:
+
+- 50 grams
+
+#### Battery:
+
+- type: 1000 mAh Lithium-ion (Li-ion)
+- replaceable: false
+- rechargeable: true
+
+### Note:
+- End of Life (EOL) device.
+- Replaced by [Dragino TrackerD](https://www.dragino.com/products/tracker/item/234-trackerd.html).
 ---
 
 Content generated from [LoRaWAN-devices](https://github.com/TheThingsNetwork/lorawan-devices)
