--- a/docs/use-the-network/devices/ready-to-use/decentlab/dl-mbx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/decentlab/dl-mbx.mdx
@@ -23,6 +23,9 @@ Ultrasonic Distance / Level Sensor for LoRaWAN.
 
 ### Specifications
 
+#### LoRaWAN device type:
+- Class A end-device
+
 #### Sensors:
 
 - distance
