--- a/docs/use-the-network/devices/ready-to-use/digital-matter/oyster.mdx
+++ b/docs/use-the-network/devices/ready-to-use/digital-matter/oyster.mdx
@@ -1,11 +1,11 @@
 ---
-id: oyster3
+id: oyster
 title: Oyster3
 description: Ultra-rugged, long-life battery-powered GPS asset tracking device for LoRaWAN Networks
 pagination_label: Oyster3
 sidebar_label: Oyster3
 image: img/use-the-network/devices/ready-to-use/digital-matter/oyster.png
-slug: /use-the-network/devices/ready-to-use/digital-matter/oyster3
+slug: /use-the-network/devices/ready-to-use/digital-matter/oyster
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -19,7 +19,8 @@ Ultra-rugged, long-life battery-powered GPS asset tracking device for LoRaWAN Ne
 ### Resources
 
 - [Product Page](https://www.digitalmatter.com/devices/oyster-lorawan)
-- [Datasheet] (https://www.digitalmatter.com/wp-content/uploads/2023/02/Oyster3-LoRaWAN-Datasheet-Digital-Matter-V8.pdf)
+- [Datasheet]
+  (https://www.digitalmatter.com/wp-content/uploads/2023/02/Oyster3-LoRaWAN-Datasheet-Digital-Matter-V8.pdf)
 
 ### Specifications
 
