--- a/docs/use-the-network/devices/ready-to-use/develiot/rwmr.mdx
+++ b/docs/use-the-network/devices/ready-to-use/develiot/rwmr.mdx
@@ -1,9 +1,8 @@
 ---
 id: rwmr
 title: Remote Water Meter Reader
-pagination_label: Rwmr
+pagination_label: RWMR
 sidebar_label: Remote Water Meter Reader
-description: Senses And Transmits Water Consumption Data In Real-Time Remotely Via LoRaWAN
 image: img/use-the-network/devices/ready-to-use/develiot/main.png
 slug: /use-the-network/devices/ready-to-use/develiot/rwmr
 ---
@@ -12,14 +11,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Remote Water Meter Reader
 
-Senses and transmits water consumption data in real-time remotely via LoRaWAN
+The Remote Water Meter Reader is designed to easily connect with standard pulse water meters or
+other 3rd party equipment and transmit data wirelessly and autonomously utilizing LoRaWAN network
+protocol.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/develiot/main.png')} />
 
 ### Resources
 
-- [Product Page](https://www.develiot.com/remote-water-meter-reader)
-- [Datasheet](<https://www.develiot.com/assets/files/Datasheet%20Remote%20Water%20Meter%20Reader%20EN%20v8.0%20June%202020(3).pdf>)
+- [Product Page](https://www.tbs.tech/iot-water-consumption-and-loss-tracking/)
+- [Datasheet](https://www.tbs.tech/wp-content/uploads/2023/02/Datasheet-Remote-Water-Meter-Reader-EN-v8.3.pdf)
 
 ### Specifications
 
@@ -30,8 +31,8 @@ Senses and transmits water consumption data in real-time remotely via LoRaWAN
 
 #### Dimensions:
 
-- width: 36 mm
-- length: 121 mm
+- width: 35 mm
+- length: 120 mm
 - height: 35 mm
 
 #### Weight:
@@ -42,6 +43,9 @@ Senses and transmits water consumption data in real-time remotely via LoRaWAN
 
 - type: AA
 - replaceable: True
+
+#### Note:
+- Develiot is now part of the Telelink Business Services, IoT Technology Group.
 
 ---
 
