--- a/docs/use-the-network/devices/ready-to-use/develiot/uaqms.mdx
+++ b/docs/use-the-network/devices/ready-to-use/develiot/uaqms.mdx
@@ -1,11 +1,8 @@
 ---
 id: uaqms
 title: Urban Air Quality Monitoring Station
-pagination_label: Uaqms
+pagination_label: UAQMS
 sidebar_label: Urban Air Quality Monitoring Station
-description:
-  Measures key air quality indicators and environmental parameters, mapping the pollution in
-  real-time.
 image: img/use-the-network/devices/ready-to-use/develiot/station.jpg
 slug: /use-the-network/devices/ready-to-use/develiot/uaqms
 ---
@@ -14,36 +11,38 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 ## Urban Air Quality Monitoring Station
 
-Measures key air quality indicators and environmental parameters, mapping the pollution in
-real-time.
+The Urban Air Quality Monitoring Station measures the key air quality indicators and environmental
+parameters with high accuracy, mapping the pollution in real-time.
 
 <img src={useBaseUrl('img/use-the-network/devices/ready-to-use/develiot/station.jpg')} />
 
 ### Resources
 
-- [Product Page](https://www.develiot.com/urban-air-quality-system)
-- [Datasheet](<https://www.develiot.com/assets/files/Datasheet%20Urban%20Air%20Quality%20Monitoring%20Station%20EN%20v7.0%20June%202020(2).pdf>)
+- [Product Page](https://www.tbs.tech/iot-urban-air-quality-monitoring/#the-solution)
+- [Datasheet](https://www.tbs.tech/wp-content/uploads/2023/03/Datasheet-Urban-Air-Quality-Monitoring-Station-EN-v7.3-March-2023.pdf)
 
 ### Specifications
 
 #### Sensors:
 
-- altitude
-- barometer
-- battery
-- co2
-- gps
+- air quality options: CO, NO2, SO2, O3, NH3, H2S, Cl2, HCl, HF, CH2O, H2
+- particulate matter (PM)
+- low concentration CO2
+- GPS
 - temperature
 - humidity
+- barometer
+- noise level
 - wind direction
 - wind speed
-- sound
+- precipitation
+- battery
 
 #### Dimensions:
 
-- width: 400 mm
-- length: 300 mm
-- height: 150 mm
+- width: 325 mm
+- length: 430 mm
+- height: 185 mm
 
 #### Weight:
 
@@ -53,6 +52,9 @@ real-time.
 
 - type: Lead Acid
 - replaceable: True
+
+#### Note:
+- Develiot is now part of the Telelink Business Services, IoT Technology Group.
 
 ---
 
